ДЗ№9 исправлены некоторые замечания